<resources>
    <string name="app_name">PryRescataPets</string>
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <string name="CrearCuentaTXT">Crea una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="ApellidoEt">Apellidos</string>
    <string name="CorreoEt">Correo electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>
    <string name="RespuestaSecreta">Respuesta secreta</string>
    <string name="Pais">Pais</string>
    <string name="Telefono">Teléfono</string>

    <string name="select">Selecciona una pregunta</string>
</resources>