<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".RegisterActivity">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/CrearCuentaTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans"
        android:textSize="20sp"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rescatapetslogo1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="65dp" >
    </ImageView>

    <EditText
        android:id="@+id/NombreEt"
        android:hint="@string/NombreEt"
        android:inputType="textPersonName|textCapWords"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/icono_nombres"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/ApellidoEt"
        android:hint="@string/ApellidoEt"
        android:inputType="textPersonName|textCapWords"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/icono_nombres"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/CorreoEt"
        android:hint="@string/CorreoEt"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/icono_correo"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/ContraseñaEt"
            android:hint="@string/ContraseñaEt"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icono_password"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/select"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_complete_txt"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/RespuestaSecreta"
        android:hint="@string/RespuestaSecreta"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/icono_text"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/Pais"
        android:hint="@string/Pais"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/icono_text"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/Telefono"
        android:hint="@string/Telefono"
        android:inputType="phone"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/icono_telefono"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegistrarUser"
        android:text="@string/RegistrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btnBackLogin"
        android:text="@string/TengounacuentaTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>